# rs_srp

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
crates/rs_srpc/: Cargo.toml  srpc.example.toml
crates/rs_srpc/src/: cli.rs  client.rs  config.rs  main.rs
crates/rs_srpd/: Cargo.toml  srpd.example.toml
crates/rs_srpd/src/: cli.rs  client_config.rs  config.rs  dashboard.html  dashboard.rs  main.rs  metrics.rs  server.rs
crates/srp-core/: Cargo.toml
crates/srp-core/src/: crypto.rs  identity.rs  lib.rs  logging.rs  mux.rs  proto.rs  quic.rs  session.rs  tlspin.rs  transport.rs  types.rs  wss.rs
