[package]
name = "srp-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0.102"
base64 = "0.22.1"
rcgen = "0.14.8"
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.11.0"
snow = "0.10.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
