[package]
name = "srp-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0.102"
argon2 = "0.5.3"
base64 = "0.22.1"
postcard = { version = "1.1.3", features = ["use-std"] }
rcgen = "0.14.8"
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.11.0"
snow = "0.10.0"
tokio = { version = "1.52.3", features = ["rt", "net", "io-util", "sync", "macros", "time"] }
tokio-util = { version = "0.7.18", features = ["compat"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
yamux = "0.13.10"
