[package]
name = "srp-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0.102"
argon2 = "0.5.3"
base64 = "0.22.1"
futures-util = "0.3.32"
postcard = { version = "1.1.3", features = ["use-std"] }
quinn = { version = "0.11.9", default-features = false, features = ["runtime-tokio", "rustls-ring", "log"] }
rcgen = "0.14.8"
rustls = { version = "0.23.40", default-features = false, features = ["ring", "std", "tls12", "logging"] }
rustls-pemfile = "2.2.0"
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.11.0"
snow = "0.10.0"
tokio = { version = "1.52.3", features = ["rt", "net", "io-util", "sync", "macros", "time"] }
tokio-rustls = { version = "0.26.4", default-features = false, features = ["ring", "tls12"] }
tokio-tungstenite = { version = "0.29.0", features = ["rustls-tls-webpki-roots"] }
tokio-util = { version = "0.7.18", features = ["compat"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
yamux = "0.13.10"
